# binja-i8086

./: .coverage  __init__.py  architecture.py  callingconv.py  coverage.xml  platform.py  pyproject.toml
.github/workflows/: tests.yml
mc/instr/: __init__.py  alu.py  call.py  jmp.py  misc.py  ret.py  test.py
tests/: conftest.py  test_architecture_api.py  test_arith_flag_semantics.py  test_binaryview.py  test_call_table_resolution.py  test_call_table_resolution.py.pre_nearimm_ptr  test_callingconv_and_platform.py  test_coding_and_helpers.py  test_flag_write_callback.py  test_import_side_effects.py  test_jump_label_fallbacks.py  test_jump_table_resolution.py  test_logic_flag_semantics.py  test_misc_prefixes.py  test_opcode_sweep.py  test_ret_pass_flags.py  test_x86_16_call_table_hook.py
